# nuxeo-mcp

./: .gitignore  DEVELOPER.md  Dockerfile  K8S.md  NUXEO_TEST.md  README.md  ReadMe_Docker.md  USAGE.md  call_nuxeo_info.py  docker-compose-demo.yml  docker-compose.yml  format_nuxeo_doc.py  llm.txt  mcp.json  mcp_client.py  nuxeo_info_resource.md  nuxeo_mcp_config.md  nuxeo_mcp_test_scenario.md  pyproject.toml  seed_nuxeo.py
.github/workflows/: build-and-unit-tests.yml  docker-integration-tests.yml  integration-tests.yml
ci/docker/nuxeo/: Dockerfile  README.md
ci/docker/nuxeo/rootfs/etc/nuxeo/conf.d/: 20-showcase-content.conf
specs/: 01_init.md  02_tests.md  03_seed.md  04_type_hinting.md  05_simplify.md  06_doc_formatter.md  07_introspection_tools.md  08_exec_operation.md  09_CRUD.md  10_better_files.md  11_more_integration_tests.md  12_github_actions.md  13_readme_update.md  14_llm_instructions.md  15_test_scenario.md  16_client_mcp.md  17_adjustments.md  18_add_healthcheck_to_docker.md
src/nuxeo_mcp/: __init__.py  __main__.py  prompts.py  resources.py  server.py  tools.py  utility.py
tests/: conftest.py  test_basic.py  test_document_tools.py  test_integration.py  test_server.py  test_utility.py
